Fixed issues with mobile overflow

--- a/app/frontend/css/sass.build.css
+++ b/app/frontend/css/sass.build.css
@@ -1,4 +1,5 @@
 .intrn-container {
+  width: 90%;
   max-width: 1200px;
   margin: 36px auto; }
 
@@ -97,6 +98,7 @@
     color: #44D1A5; }
 
 .intrn-container {
+  width: 90%;
   max-width: 1200px;
   margin: 36px auto; }
 
