--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,6 +1,7 @@
 @import "variables";
 
 .intrn-container {
+  width: 90%;
   max-width: 1200px;
   margin: 36px auto;
 }
